# ARchivist

./: .env.template  .gitignore  README.md  __init__.py  docker-compose.yml  justfile  main.py  pyproject.toml
context/: TASKS.md  TECH.md  TELEGRAM_MESSAGE_STRUCTURE.md
scripts/: pre-commit.sh
src/: config.py
src/llm/: llm_interface.py  ollama_provider.py  prompts.py
src/models/: enums.py  message.py  user.py
src/parsers/: telegram_parser.py
src/processing/: context_manager.py
src/state/: processor_state.py
tests/llm/: test_ollama_provider.py
tests/processing/: test_context_manager.py
